--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -3,38 +3,27 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="?android:actionBarSize"
-        android:background="@color/colorPrimary">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/me"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:textColor="@color/white"/>
-    </android.support.v7.widget.Toolbar>
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none">
+        android:scrollbars="none"
+        android:paddingBottom="?android:actionBarSize">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
             <include layout="@layout/view_me_header"/>
             <include layout="@layout/view_me_own"/>
             <include layout="@layout/view_me_settings"/>
             <Button
-                android:id="@+id/login_out"
+                android:id="@+id/me_login_out"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/logout"
                 android:layout_marginTop="10dp"
                 android:textSize="20sp"
                 android:padding="16dp" />
+
         </LinearLayout>
     </ScrollView>
 
