--- a/app/src/main/res/menu/community_search.xml
+++ b/app/src/main/res/menu/community_search.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/search_question"
         android:title="@string/search"
-        android:icon="@mipmap/search"
+        android:icon="@drawable/search"
         app:showAsAction="always"/>
 </menu>
