--- a/app/src/main/res/layout/item_answer.xml
+++ b/app/src/main/res/layout/item_answer.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/answer_item"
+<LinearLayout android:id="@+id/answer_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp"
     android:orientation="vertical"
     android:background="?selectableItemBackground"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,43 +40,66 @@
         android:textColor="@color/primary_light"
         android:text="publish date"/>
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="10dp">
-        <LinearLayout
-            android:id="@+id/favorite"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
-            <TextView
-                android:id="@+id/favorite_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_thumb_up"
-                android:drawablePadding="8dp"
-                android:gravity="center_vertical"
-                android:textColor="@color/primary_light"
-                android:text="0"/>
-        </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/comment"
-            android:layout_width="80dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
-            <TextView
-                android:id="@+id/comment_count"
-                android:layout_width="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/like_layout"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:drawableLeft="@drawable/ic_comment"
-                android:drawablePadding="8dp"
-                android:gravity="center_vertical"
-                android:textColor="@color/primary_light"
-                android:text="0"/>
+                android:orientation="horizontal"
+                android:gravity="center">
+                <ImageButton
+                    android:id="@+id/like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="?selectableItemBackground"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_thumb_up"/>
+                <TextView
+                    android:id="@+id/like_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/primary_light"
+                    android:text="0"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/comment_layout"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+                <ImageButton
+                    android:id="@+id/comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:background="?selectableItemBackground"
+                    android:src="@drawable/ic_comment"/>
+                <TextView
+                    android:id="@+id/comment_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/primary_light"
+                    android:text="0"/>
+            </LinearLayout>
+
         </LinearLayout>
-    </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
