--- a/app/src/main/res/layout/item_new_answered_question.xml
+++ b/app/src/main/res/layout/item_new_answered_question.xml
@@ -20,50 +20,77 @@
         android:layout_marginTop="10dp"/>
 
 
-    <TextView
+    <com.example.bob.health_helper.Widget.ExpandableTextView
         android:id="@+id/answer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"/>
+
+    <TextView
+        android:id="@+id/publish_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:maxLines="5"
-        android:minLines="1"
-        android:ellipsize="end"
-        android:text="Answer"/>
+        android:textColor="@color/primary_light"
+        android:text="publish date"/>
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="10dp">
 
-        <TextView
-            android:id="@+id/favorite_count"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_thumb_up"
-            android:drawablePadding="8dp"
-            android:gravity="center_vertical"
-            android:textColor="@color/primary_light"
-            android:text="0"/>
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/comment_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:drawableLeft="@drawable/ic_comment"
-            android:drawablePadding="8dp"
-            android:gravity="center_vertical"
-            android:textColor="@color/primary_light"
-            android:text="0"/>
+            <LinearLayout
+                android:id="@+id/like_layout"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+                <ImageButton
+                    android:id="@+id/like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="?selectableItemBackground"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_thumb_up"/>
+                <TextView
+                    android:id="@+id/like_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/primary_light"
+                    android:text="0"/>
+            </LinearLayout>
 
-        <TextView
-            android:id="@+id/publish_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:textColor="@color/primary_light"
-            android:text="publish date"/>
-
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/comment_layout"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+                <ImageButton
+                    android:id="@+id/comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:background="?selectableItemBackground"
+                    android:src="@drawable/ic_comment"/>
+                <TextView
+                    android:id="@+id/comment_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/primary_light"
+                    android:text="0"/>
+            </LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
