--- a/app/src/main/res/layout/item_user_answer.xml
+++ b/app/src/main/res/layout/item_user_answer.xml
@@ -17,17 +17,12 @@
         android:textSize="20sp"
         android:layout_marginTop="10dp" />
 
-    <TextView
+    <com.example.bob.health_helper.Widget.ExpandableTextView
         android:id="@+id/answer"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/question_title"
-        android:layout_marginTop="10dp"
-        android:maxLines="5"
-        android:minLines="1"
-        android:ellipsize="end"
-        android:text="Answer"/>
-
+        android:layout_marginTop="10dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
