--- a/app/src/main/res/layout/item_hotkey.xml
+++ b/app/src/main/res/layout/item_hotkey.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/bg_solid"
+        android:background="@drawable/bg_hotkey"
         android:paddingHorizontal="10dp"
         android:paddingVertical="5dp"
         android:text="标签"
