--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -14,13 +14,39 @@
         android:scaleType="centerCrop"
         android:src="@drawable/img_holder" />
 
-    <TextView
-        android:id="@+id/news_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textSize="18sp"
-        android:textStyle="bold"/>
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="vertical"
+       android:layout_gravity="center_vertical">
+       <TextView
+           android:id="@+id/news_title"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:ellipsize="end"
+           android:maxLines="2"
+           android:textSize="18sp"
+           android:textStyle="bold" />
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal"
+           android:layout_marginTop="10dp"
+           android:layout_marginLeft="10dp"
+           android:layout_marginRight="10dp">
+           <TextView
+               android:id="@+id/news_source"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:background="@drawable/bg_source"
+               android:textSize="12sp" />
+           <TextView
+               android:id="@+id/publish_date"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="25dp"
+               android:textSize="12sp" />
+       </LinearLayout>
+   </LinearLayout>
 
 </LinearLayout>
