--- a/app/src/main/res/layout/fragment_measure.xml
+++ b/app/src/main/res/layout/fragment_measure.xml
@@ -1,13 +1,17 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <Button
+        android:id="@+id/pair_ls"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="measure"
-        android:textSize="30sp" />
+        android:text="@string/pair_ls"
+        android:textSize="24sp" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/measure_records"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-</RelativeLayout>
+</LinearLayout>
