--- a/app/src/main/res/layout/most_rencent_weight.xml
+++ b/app/src/main/res/layout/most_rencent_weight.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="100dp"
     android:orientation="vertical"
     android:layout_marginTop="16dp">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/weight"
+        android:text="@string/history_weight"
         android:textSize="20sp"
         android:textColor="@color/black"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp" />
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        android:textColor="@color/grey"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp" />
     <TextView
@@ -17,8 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:textSize="20sp"
-        android:text="65"
+        android:textSize="22sp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="8dp"/>
 </LinearLayout>
