--- a/app/src/main/res/layout/measure_device.xml
+++ b/app/src/main/res/layout/measure_device.xml
@@ -18,20 +18,21 @@
         android:orientation="horizontal"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:visibility="gone">
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
             android:src="@drawable/ic_device_weight_scale"
-            android:layout_marginRight="12dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/weight_name"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textColor="@color/black"
             android:layout_gravity="center_vertical"/>
     </LinearLayout>
@@ -45,5 +46,5 @@
         android:layout_gravity="center"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:background="@drawable/bg_pair_device"/>
+        android:background="@drawable/bg_pair_device" />
 </LinearLayout>
